force-app/main/default/objects/Activity/fields/Advice_Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Advice_Meeting_Location__c</fullName>
    <label>Advice Meeting Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>33 Holborn</fullName>
            </value>
            <value>
                <fullName>Carter Lane</fullName>
            </value>
            <value>
                <fullName>Webex</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>