force-app/main/default/objects/Activity/fields/CompletedBy__c.field-meta.xml
<CustomField>
    <fullName>CompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An audit field to capture who completed a task that is more reliable than assigned to and last modified by.</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ActivitiesCompleted</relationshipName>
    <type>Lookup</type>
</CustomField>