force-app/main/default/objects/Activity/fields/Discovery_Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Meeting_Status__c</fullName>
    <description>Picklist to show the status of the discovery meeting</description>
    <label>Meeting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting booked</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>