force-app/main/default/objects/Activity/fields/FinServ__Objectives__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Objectives__c</fullName>
    <description>Notes about client&#39;s objectives</description>
    <label>Objectives</label>
    <type>TextArea</type>
</CustomField>