force-app/main/default/objects/Activity/fields/FulfilmentAmount__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentAmount__c</fullName>
    <description>Added to this object to allow us to report on and display in list views related fulfilment information. This particular field shows the amount that has been recommended to transfer.</description>
    <formula>RelatedFulfilment__r.Recommendation__r.Amount__c</formula>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>