force-app/main/default/objects/Activity/fields/FulfilmentDaysSinceSubmission__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentDaysSinceSubmission__c</fullName>
    <description>Added to this object to allow us to report on and display in list views related fulfilment information. This particular field shows the days since a given piece of fulfilment was submitted.</description>
    <formula>IF(ISBLANK(RelatedFulfilment__c), null, TODAY() - RelatedFulfilment__r.DateSubmitted__c)</formula>
    <label>Days since submission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>