force-app/main/default/objects/Activity/fields/FulfilmentProvider__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentProvider__c</fullName>
    <description>Added to this object to allow us to report on and display in list views related fulfilment information. This particular field shows the provider who is related to the transfer.</description>
    <formula>RelatedFulfilment__r.Recommendation__r.SourceLegacy__r.Public_Provider_Name__r.Name</formula>
    <label>Provider</label>
    <type>Text</type>
</CustomField>