force-app/main/default/objects/Activity/fields/FulfilmentStatus__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentStatus__c</fullName>
    <description>Pull the fulfilment status onto the task so it can be be used in filtering.</description>
    <formula>Text(RelatedFulfilment__r.Status__c)</formula>
    <label>Fulfilment status</label>
    <type>Text</type>
</CustomField>