force-app/main/default/objects/Activity/fields/HouseholdStatus__c.field-meta.xml
<CustomField>
    <fullName>HouseholdStatus__c</fullName>
    <description>This field exposes the household status on the activity object to support custom reporting built on task and event report types.</description>
    <formula>IF(ISBLANK(FinServ__Household__c), &quot;&quot;, TEXT(FinServ__Household__r.FinServ__Status__c))</formula>
    <label>Household status</label>
    <type>Text</type>
</CustomField>