force-app/main/default/objects/Activity/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <description>Location of Discovery and Advice Meetings.</description>
    <inlineHelpText>Please add further details into the description.</inlineHelpText>
    <label>Meeting Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meeting_Location</valueSetName>
    </valueSet>
</CustomField>