force-app/main/default/objects/Activity/fields/NovaId__c.field-meta.xml
<CustomField>
    <fullName>NovaId__c</fullName>
    <externalId>true</externalId>
    <label>NOVA ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>