force-app/main/default/objects/Activity/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <formula>IF(ISBLANK(WhatId), 
CASE(LEFT(WhoId, 3),
&quot;00Q&quot;, &quot;Lead&quot;,
&quot;003&quot;, &quot;Contact&quot;,
&quot;&quot;), 
CASE(LEFT(WhatId, 3),
&quot;001&quot;,&quot;Account&quot;,
&quot;a0f&quot;,&quot;LOA__c&quot;,
&quot;a0g&quot;,&quot;Fulfillment__c&quot;,
&quot;a0h&quot;,&quot;Advice__c&quot;,
&quot;a08&quot;,&quot;FinServ__FinancialAccount__c&quot;,
&quot;006&quot;,&quot;Opportunity&quot;,
&quot;a2R&quot;,&quot;OW_rtq__c&quot;,
&quot;a1c&quot;,&quot;OW_review__c&quot;,
&quot;a13&quot;,&quot;AML__c&quot;,
&quot;500&quot;,&quot;Case&quot;,
&quot;a2i&quot;,&quot;Fulfilment__c&quot;,
&quot;&quot;))</formula>
    <label>Object</label>
    <type>Text</type>
</CustomField>