force-app/main/default/objects/Activity/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <formula>IF(NOT(ISBLANK(FinServ__Household__r.OctopusMoneyRecord__c)), CASESAFEID(FinServ__Household__c), IF(ISBLANK(FinServ__Household__c) &amp;&amp; (Owner:Queue.DeveloperName = &quot;OMPlanners&quot; || Owner:Queue.DeveloperName = &quot;OMSpecialists&quot; ||  ISPICKVAL(Owner:User.GroupCompany__c, &quot;OM&quot;)), OwnerId, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM Record</label>
    <type>Text</type>
</CustomField>