force-app/main/default/objects/Activity/fields/OctopusMoneyRecordEvent__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecordEvent__c</fullName>
    <formula>Account.OctopusMoneyRecord__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM Record Event</label>
    <type>Text</type>
</CustomField>