force-app/main/default/objects/Activity/fields/OW_parking_lot__c.field-meta.xml
<CustomField>
    <fullName>OW_parking_lot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field to capture whether the task is in a parking lot because the advice it pertains to is in the parking lot too.</description>
    <label>Parking lot</label>
    <type>Checkbox</type>
</CustomField>