force-app/main/default/objects/Activity/fields/OW_process__c.field-meta.xml
<CustomField>
    <fullName>OW_process__c</fullName>
    <label>Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>