force-app/main/default/objects/Activity/fields/OW_stage__c.field-meta.xml
<CustomField>
    <fullName>OW_stage__c</fullName>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>