force-app/main/default/objects/Activity/fields/OW_target_start_date__c.field-meta.xml
<CustomField>
    <fullName>OW_target_start_date__c</fullName>
    <description>The date from which a task can start and by virtue the date we target to start this on.</description>
    <label>Target start date</label>
    <type>Date</type>
</CustomField>