force-app/main/default/objects/Activity/fields/Planner__c.field-meta.xml
<CustomField>
    <fullName>Planner__c</fullName>
    <description>If the activity is related to advice, display the suitability planner.</description>
    <formula>IF(ISBLANK( Related_Advice__c ), &quot;&quot;, Related_Advice__r.Assigned_planner__r.FirstName  &amp; &quot; &quot; &amp;  Related_Advice__r.Assigned_planner__r.LastName)</formula>
    <label>Planner</label>
    <type>Text</type>
</CustomField>