force-app/main/default/objects/Activity/fields/Related_Advice__c.field-meta.xml
<CustomField>
    <fullName>Related_Advice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>