force-app/main/default/objects/Activity/fields/Related_AML_KYC_Check__c.field-meta.xml
<CustomField>
    <fullName>Related_AML_KYC_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related AML &amp; KYC Check</label>
    <referenceTo>AML__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>