force-app/main/default/objects/Activity/fields/Related_Annual_Review__c.field-meta.xml
<CustomField>
    <fullName>Related_Annual_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Annual Review</label>
    <referenceTo>OW_review__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>