force-app/main/default/objects/Activity/fields/Related_Fact_Find__c.field-meta.xml
<CustomField>
    <fullName>Related_Fact_Find__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Fact Find</label>
    <referenceTo>Fact_Find__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>