force-app/main/default/objects/Activity/fields/RelatedInformationRequest__c.field-meta.xml
<CustomField>
    <fullName>RelatedInformationRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The information request related to this task</description>
    <label>Related Information Request</label>
    <referenceTo>InformationRequest__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>