force-app/main/default/objects/Activity/fields/RelatedToDetails__c.field-meta.xml
<CustomField>
    <fullName>RelatedToDetails__c</fullName>
    <description>Field to display the human readable name of the related object for a task</description>
    <formula>IF( NOT(ISBLANK( RelatedFulfilment__c )),  RelatedFulfilment__r.SearchName__c , IF( NOT(ISBLANK( RelatedInformationRequest__c )),&quot;IR - &quot; + RelatedInformationRequest__r.FinancialProductFinServ__r.Name ,WhatId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related to details</label>
    <type>Text</type>
</CustomField>