force-app/main/default/objects/Activity/fields/TempAutoClosureBug__c.field-meta.xml
<CustomField>
    <fullName>TempAutoClosureBug__c</fullName>
    <description>Temporary field for use in Sep 2024 as part of investigating an auto-closure bug.</description>
    <label>Temp | Auto-closure Bug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>